# shoes-store

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  REMEMBER.md  docker-compose.yml  main.py  products.db  pyproject.toml  sql.img.dev
.command/: run  run_sql
src/: database.py
src/commons/: exceptions.py
src/constants/: tables.py
src/products/: db_model.py  schema.py
src/products/repository/: product.py
tests/unit/functionality/: test_product_graphQL.py
